--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@rn-primitives/portal": "^1.3.0",
     "@rn-primitives/separator": "^1.2.0",
     "@rn-primitives/slot": "^1.2.0",
+    "@sentry/react-native": "^7.8.0",
     "@tanstack/react-query": "^5.75.1",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.1",
