--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "expo": "54.0.20",
     "expo-camera": "~17.0.8",
     "expo-constants": "~18.0.10",
-    "expo-dev-client": "~6.0.16",
     "expo-font": "~14.0.9",
     "expo-image": "~3.0.10",
     "expo-image-picker": "~17.0.8",
@@ -53,7 +52,6 @@
     "react-native": "0.81.5",
     "react-native-currency-input": "^1.1.1",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-masked-text": "^1.13.0",
     "react-native-modalize": "^2.1.1",
     "react-native-pager-view": "6.9.1",
@@ -66,8 +64,7 @@
     "react-native-worklets": "^0.5.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.4",
-    "zustand": "^5.0.4"
+    "zod": "^3.23.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
