--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-tab-view": "^3.5.2",
+    "react-native-toast-message": "^2.3.3",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "^0.5.1",
     "tailwind-merge": "^3.4.0",
