--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@expo/metro-runtime": "~6.1.2",
     "@hookform/resolvers": "^3.3.4",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-clipboard/clipboard": "^1.16.3",
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/drawer": "^7.5.0",
     "@react-navigation/material-top-tabs": "^7.0.18",
@@ -74,6 +75,7 @@
     "@commitlint/config-conventional": "^18.4.4",
     "@types/react": "~19.1.10",
     "@types/react-dom": "~19.1.7",
+    "expo-atlas": "^0.4.0",
     "husky": "^8.0.3",
     "react-native-svg-transformer": "^1.3.0",
     "tailwindcss": "3.3.2",
