--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@commitlint/config-conventional": "^18.4.4",
     "@types/react": "~19.1.10",
     "@types/react-dom": "~19.1.7",
+    "babel-plugin-transform-imports": "^2.0.0",
     "expo-atlas": "^0.4.0",
     "husky": "^8.0.3",
     "react-native-svg-transformer": "^1.3.0",
