--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.19",
     "es-toolkit": "^1.42.0",
     "expo": "54.0.20",
     "expo-camera": "~17.0.8",
